[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
itertools = "0.12.0"
ndarray = "0.15.6"
nom = "7.1.3"
num = { version = "0.4.1", features = [] }
indexmap = "2.1.0"
priority-queue = "1.3.2"
pathfinding = "4.6.0"
ansi-hex-color = "0.1.1"

[build]
rustflags = ["-Awarnings"]
